Initial work for type inheritance. Types that inherit from other types are always considered as matches to those super types. However, the inverse is not true.
This commit adds support for inheritance _checking_, but does not implement inherited _lookups_, meaning calls to functions defined in super types will not be found.

--- a/.sentry.yml
+++ b/.sentry.yml
@@ -5,7 +5,7 @@
 # Typecheck every time any of the source files changes.
 display_name: typecheck specs
 info: true
-# `|| echo` makes sure that sentry keeps running even if there the specs fail.
+# `|| echo` makes sure that sentry keeps running even if the specs fail.
 build: crystal spec || echo ''
 run: echo ''
 watch:
